force-app/main/default/objects/Contact_Card__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF(
ISBLANK(End_Date__c)
||
End_Date__c &gt; TODAY(),
True,
False
)</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>