force-app/main/default/objects/Contact_Card__c/fields/Constituent__c.field-meta.xml
<CustomField>
    <fullName>Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Cards</relationshipLabel>
    <relationshipName>Contact_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>