force-app/main/default/objects/Contact_Card__c/fields/Constituent_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Indicator__c</fullName>
    <formula>NOT(ISBLANK(Constituent__c))</formula>
    <label>Constituent Indicator</label>
    <type>Checkbox</type>
</CustomField>