force-app/main/default/objects/Contact_Card__c/fields/High_School_Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>High_School_Graduation_Date__c</fullName>
    <label>High School Graduation Date</label>
    <type>Date</type>
</CustomField>