force-app/main/default/objects/Contact_Card__c/recordTypes/Constituent_Created.recordType-meta.xml
<RecordType>
    <fullName>Constituent_Created</fullName>
    <active>false</active>
    <label>Constituent Created</label>
</RecordType>