force-app/main/default/objects/Contact_Card__c/recordTypes/Non_Constituent_Relationship.recordType-meta.xml
<RecordType>
    <fullName>Non_Constituent_Relationship</fullName>
    <active>true</active>
    <label>Non-Constituent Relationship</label>
</RecordType>