force-app/main/default/objects/Contact_Card__c/recordTypes/Organization_Contact.recordType-meta.xml
<RecordType>
    <fullName>Organization_Contact</fullName>
    <active>true</active>
    <label>Organization Contact</label>
</RecordType>