force-app/main/default/objects/Contact_Card__c/validationRules/Contact_Card_Constituent.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Card_Constituent</fullName>
    <active>true</active>
    <description>Constituent OR First Name and Last Name</description>
    <errorConditionFormula>OR(
AND(
NOT(ISBLANK(First_Name__c)),
ISBLANK(Last_Name__c)),
AND(
ISBLANK(First_Name__c),
NOT(ISBLANK(Last_Name__c))),
AND(
ISBLANK(Constituent__c),
ISBLANK(First_Name__c),
ISBLANK(Last_Name__c))
)</errorConditionFormula>
    <errorMessage>Please indicate either a Constituent or First Name and Last Name.</errorMessage>
</ValidationRule>