force-app/main/default/objects/Contact_Card__c/validationRules/Contact_Info.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Info</fullName>
    <active>true</active>
    <description>One form of Contact Information is required to save a Contact Card</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName  &lt;&gt; &quot;Non_Constituent_Relationship&quot;,
ISBLANK(Constituent__c),
AND(
ISBLANK(Email__c),
ISBLANK(Phone_Number__c)
))</errorConditionFormula>
    <errorMessage>Please indicate either a Phone or Email.</errorMessage>
</ValidationRule>