force-app/main/default/objects/Contact_Card__c/validationRules/Contact_Person_JobTitle.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Person_JobTitle</fullName>
    <active>false</active>
    <description>Job title required for Contact Person</description>
    <errorConditionFormula>AND(
RecordType.Name = &quot;New Contact Person&quot;,
ISBLANK(Job_Title__c)
)</errorConditionFormula>
    <errorMessage>A Job Title is required for a Contact Person</errorMessage>
</ValidationRule>