force-app/main/default/objects/Contact_Card__c/validationRules/Phone_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Type</fullName>
    <active>true</active>
    <description>When a phone number is entered, a phone type is required</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Phone_Number__c)),
ISBLANK(TEXT(Phone_Type__c))
)</errorConditionFormula>
    <errorDisplayField>Phone_Type__c</errorDisplayField>
    <errorMessage>When Phone Number is entered, please indicate the Phone Type</errorMessage>
</ValidationRule>